# whisperFlow-free-ollama

./: README.md  main.py  pyproject.toml  requirements.txt
tools/: list_devices.py  test_mics.py
whisperflow/: __init__.py  app.py  audio.py  config.py  enhancer.py  history.py  notifier.py  overlay.py  startup.py  transcriber.py  tray.py
